@@ -23,5 +23,3 @@ import/list/direct edit
 
 --------------
 - panel crash
-
-- songs op tracknr volgorde binnen albums, artists alfabetisch?
